--- a/index.html
+++ b/index.html
@@ -1,264 +1,117 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="pl">
 <head>
-<meta charset="UTF-8">
-<title>Video Grid</title>
+<meta charset="utf-8">
+<title>Video Safari Safe</title>
 
 <style>
-html, body {
+body {
   margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
   background: #000;
-  font-family: sans-serif;
 }
 
-.videos-container {
-  width: 95vw;
-  height: 95vh;
-  margin: auto;
-  padding: 20px 0;
+.grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  gap: 12px;
+  gap: 20px;
+  padding: 40px;
+}
+
+.video-box {
   position: relative;
 }
 
-.video-wrapper {
-  position: relative;
-  border-radius: 12px;
-  overflow: hidden;
-  background: #000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.video-wrapper video {
+video {
   width: 100%;
-  height: 100%;
-  object-fit: contain;
+  height: auto;
   display: block;
+  background: #000;
 }
 
-/* UKRYWAMY NATYWNE CONTROLS */
-.video-wrapper video::-webkit-media-controls {
-  display: none !important;
-}
-
-.video-wrapper video {
-  pointer-events: none;
-}
-
-.video-wrapper.inactive video {
-  filter: blur(4px) brightness(0.35);
-}
-
-.video-wrapper.active {
+.play-btn {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 66%;
-  height: 90%;
-  transform: translate(-50%, -50%);
-  z-index: 100;
-}
-
-/* PLAY */
-.play-overlay {
-  position: absolute;
-  width: 64px;
-  height: 64px;
-  background: rgba(255,255,255,0.7);
-  border-radius: 50%;
+  inset: 0;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  font-size: 60px;
+  color: white;
   cursor: pointer;
-  z-index: 20;
+  background: rgba(0,0,0,0.25);
 }
 
-.play-overlay.play::after {
-  content: "";
-  border-left: 22px solid #F8AC10;
-  border-top: 14px solid transparent;
-  border-bottom: 14px solid transparent;
-}
-
-.play-overlay.pause::after {
-  content: "";
-  width: 18px;
-  height: 22px;
-  border-left: 6px solid #F8AC10;
-  border-right: 6px solid #F8AC10;
-}
-
-/* PRZEWIJANIE I CLOSE */
-.seek-btn,
-.close-btn {
-  position: absolute;
+.play-btn.hidden {
   display: none;
-  justify-content: center;
-  align-items: center;
-  background: rgba(255,255,255,0.7);
-  border-radius: 50%;
-  color: #F8AC10;
-  cursor: pointer;
-  z-index: 30;
-}
-
-.seek-btn {
-  top: 50%;
-  width: 48px;
-  height: 48px;
-  font-size: 22px;
-}
-
-.seek-btn.left { left: 14px; }
-.seek-btn.right { right: 14px; }
-
-.close-btn {
-  top: 12px;
-  right: 12px;
-  width: 36px;
-  height: 36px;
-  font-size: 22px;
-}
-
-/* TYLKO DLA AKTYWNEGO VIDEO */
-.video-wrapper.active .seek-btn,
-.video-wrapper.active .close-btn {
-  display: flex;
-}
-
-@media (max-width: 900px) {
-  .videos-container {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-  }
-  .video-wrapper.active {
-    width: 90%;
-    height: 85%;
-  }
 }
 </style>
 </head>
 
 <body>
 
-<div class="videos-container">
+<div class="grid">
 
-  <div class="video-wrapper">
-    <video src="videos/video1.mp4" muted playsinline preload="metadata" controls></video>
-    <div class="play-overlay play"></div>
-    <div class="seek-btn left">◀</div>
-    <div class="seek-btn right">▶</div>
-    <div class="close-btn">✕</div>
+  <div class="video-box">
+    <video preload="metadata">
+      <source src="videos/video1.mp4" type="video/mp4">
+    </video>
+    <div class="play-btn">▶</div>
   </div>
 
-  <div class="video-wrapper">
-    <video src="videos/video2.mp4" muted playsinline preload="metadata" controls></video>
-    <div class="play-overlay play"></div>
-    <div class="seek-btn left">◀</div>
-    <div class="seek-btn right">▶</div>
-    <div class="close-btn">✕</div>
+  <div class="video-box">
+    <video preload="metadata">
+      <source src="videos/video2.mp4" type="video/mp4">
+    </video>
+    <div class="play-btn">▶</div>
   </div>
 
-  <div class="video-wrapper">
-    <video src="videos/video3.mp4" muted playsinline preload="metadata" controls></video>
-    <div class="play-overlay play"></div>
-    <div class="seek-btn left">◀</div>
-    <div class="seek-btn right">▶</div>
-    <div class="close-btn">✕</div>
+  <div class="video-box">
+    <video preload="metadata">
+      <source src="videos/video3.mp4" type="video/mp4">
+    </video>
+    <div class="play-btn">▶</div>
   </div>
 
-  <div class="video-wrapper">
-    <video src="videos/video4.mp4" muted playsinline preload="metadata" controls></video>
-    <div class="play-overlay play"></div>
-    <div class="seek-btn left">◀</div>
-    <div class="seek-btn right">▶</div>
-    <div class="close-btn">✕</div>
+  <div class="video-box">
+    <video preload="metadata">
+      <source src="videos/video4.mp4" type="video/mp4">
+    </video>
+    <div class="play-btn">▶</div>
   </div>
 
-  <div class="video-wrapper">
-    <video src="videos/video5.mp4" muted playsinline preload="metadata" controls></video>
-    <div class="play-overlay play"></div>
-    <div class="seek-btn left">◀</div>
-    <div class="seek-btn right">▶</div>
-    <div class="close-btn">✕</div>
+  <div class="video-box">
+    <video preload="metadata">
+      <source src="videos/video5.mp4" type="video/mp4">
+    </video>
+    <div class="play-btn">▶</div>
   </div>
 
-  <div class="video-wrapper">
-    <video src="videos/video6.mp4" muted playsinline preload="metadata" controls></video>
-    <div class="play-overlay play"></div>
-    <div class="seek-btn left">◀</div>
-    <div class="seek-btn right">▶</div>
-    <div class="close-btn">✕</div>
+  <div class="video-box">
+    <video preload="metadata">
+      <source src="videos/video6.mp4" type="video/mp4">
+    </video>
+    <div class="play-btn">▶</div>
   </div>
 
 </div>
 
 <script>
-const wrappers = document.querySelectorAll('.video-wrapper');
-let active = null;
+document.querySelectorAll('.video-box').forEach(box => {
+  const video = box.querySelector('video');
+  const play = box.querySelector('.play-btn');
 
-function closeActive() {
-  if (!active) return;
-  const v = active.querySelector('video');
-  v.pause();
-  active.classList.remove('active');
-  wrappers.forEach(w => w.classList.remove('inactive'));
-  active = null;
-}
+  play.addEventListener('click', () => {
+    video.play();
+    play.classList.add('hidden');
+  });
 
-wrappers.forEach(w => {
-  const v = w.querySelector('video');
-  const play = w.querySelector('.play-overlay');
-  const left = w.querySelector('.seek-btn.left');
-  const right = w.querySelector('.seek-btn.right');
-  const close = w.querySelector('.close-btn');
+  video.addEventListener('pause', () => {
+    play.classList.remove('hidden');
+  });
 
-  play.onclick = e => {
-    e.stopPropagation();
-
-    if (!active) {
-      wrappers.forEach(x => { if (x !== w) x.classList.add('inactive'); });
-      w.classList.add('active');
-      active = w;
-      v.muted = false;
-      v.play();
-      play.classList.replace('play','pause');
-    } else if (active === w) {
-      if (v.paused) {
-        v.play();
-        play.classList.replace('play','pause');
-      } else {
-        v.pause();
-        play.classList.replace('pause','play');
-      }
-    }
-  };
-
-  left.onclick = e => {
-    e.stopPropagation();
-    v.currentTime = Math.max(0, v.currentTime - 5);
-  };
-
-  right.onclick = e => {
-    e.stopPropagation();
-    v.currentTime = Math.min(v.duration, v.currentTime + 5);
-  };
-
-  close.onclick = e => {
-    e.stopPropagation();
-    closeActive();
-  };
-});
-
-document.addEventListener('keydown', e => {
-  if (e.key === 'Escape') closeActive();
+  video.addEventListener('ended', () => {
+    play.classList.remove('hidden');
+  });
 });
 </script>
 
